--- a/lib/base/CMakeLists.txt
+++ b/lib/base/CMakeLists.txt
@@ -97,13 +97,7 @@ if(ICINGA2_UNITY_BUILD)
     mkunity_target(base base base_SOURCES)
 endif()
 
-add_library(base STATIC ${base_SOURCES})
-
-target_link_libraries(base ${CMAKE_DL_LIBS} ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} ${YAJL_LIBRARIES} mmatch socketpair)
-
-if(HAVE_LIBEXECINFO)
-    target_link_libraries(base execinfo)
-endif()
+add_library(base OBJECT ${base_SOURCES})
 
 include_directories(${icinga2_SOURCE_DIR}/third-party/execvpe)
 link_directories(${icinga2_BINARY_DIR}/third-party/execvpe)
@@ -113,14 +107,6 @@ link_directories(${icinga2_BINARY_DIR}/third-party/mmatch)
 
 include_directories(${icinga2_SOURCE_DIR}/third-party/socketpair)
 link_directories(${icinga2_BINARY_DIR}/third-party/socketpair)
-
-if(UNIX OR CYGWIN)
-  target_link_libraries(base execvpe)
-endif()
-
-if(WIN32)
-  target_link_libraries(base ws2_32 dbghelp shlwapi msi)
-endif()
 
 set_target_properties (
   base PROPERTIES
