--- a/lib/checker/CMakeLists.txt
+++ b/lib/checker/CMakeLists.txt
@@ -25,9 +25,9 @@ if(ICINGA2_UNITY_BUILD)
     mkunity_target(checker checker checker_SOURCES)
 endif()
 
-add_library(checker STATIC ${checker_SOURCES})
+add_library(checker OBJECT ${checker_SOURCES})
 
-target_link_libraries(checker ${Boost_LIBRARIES} base config icinga remote)
+add_dependencies(checker base config icinga remote)
 
 set_target_properties (
   checker PROPERTIES
