--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ find_package(YAJL)
 if(NOT YAJL_FOUND)
   include_directories(${icinga2_BINARY_DIR}/third-party/yajl/include)
   link_directories(${icinga2_BINARY_DIR}/third-party/yajl)
-  list(APPEND base_SOURCES $<TARGET_OBJECTS:yajl>)
+  list(APPEND base_OBJS $<TARGET_OBJECTS:yajl>)
 else()
   list(APPEND base_DEPS ${YAJL_LIBRARIES})
 endif()
