--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,95 +51,96 @@ set(base_test_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(base test base_test_SOURCES)
+  mkunity_target(base test base_test_SOURCES)
 endif()
 
 add_boost_test(base
   SOURCES test-runner.cpp ${base_test_SOURCES}
   LIBRARIES ${base_DEPS}
-  TESTS base_array/construct
-        base_array/getset
-        base_array/resize
-        base_array/insert
-        base_array/remove
-        base_array/foreach
-        base_array/clone
-        base_array/json
-        base_base64/base64
-        base_convert/tolong
-        base_convert/todouble
-        base_convert/tostring
-        base_convert/tobool
-        base_dictionary/construct
-        base_dictionary/get1
-        base_dictionary/get2
-        base_dictionary/foreach
-        base_dictionary/remove
-        base_dictionary/clone
-        base_dictionary/json
-        base_fifo/construct
-        base_fifo/io
-        base_json/invalid1
-        base_match/tolong
-        base_netstring/netstring
-        base_object/construct
-        base_object/getself
-        base_serialize/scalar
-        base_serialize/array
-        base_serialize/dictionary
-        base_serialize/object
-        base_shellescape/escape_basic
-        base_shellescape/escape_quoted
-        base_stacktrace/stacktrace
-        base_stream/readline_stdio
-        base_string/construct
-        base_string/equal
-        base_string/clear
-        base_string/append
-        base_string/trim
-        base_string/contains
-        base_string/replace
-        base_string/index
-        base_string/find
-        base_timer/construct
-        base_timer/interval
-        base_timer/invoke
-        base_timer/scope
-        base_type/gettype
-        base_type/assign
-        base_type/byname
-        base_type/instantiate
-        base_value/scalar
-        base_value/convert
-        base_value/format
-        config_ops/simple
-        config_ops/advanced
-        icinga_checkresult/host_1attempt
-        icinga_checkresult/host_2attempts
-        icinga_checkresult/host_3attempts
-        icinga_checkresult/service_1attempt
-        icinga_checkresult/service_2attempts
-        icinga_checkresult/service_3attempts
-        icinga_checkresult/host_flapping_notification
-        icinga_checkresult/service_flapping_notification
-        icinga_notification/state_filter
-        icinga_notification/type_filter
-        icinga_macros/simple
-        icinga_legacytimeperiod/simple
-        icinga_perfdata/empty
-        icinga_perfdata/simple
-        icinga_perfdata/quotes
-        icinga_perfdata/multiple
-        icinga_perfdata/uom
-        icinga_perfdata/warncritminmax
-        icinga_perfdata/ignore_invalid_warn_crit_min_max
-        icinga_perfdata/invalid
-        icinga_perfdata/multi
-        remote_url/id_and_path
-        remote_url/parameters
-        remote_url/get_and_set
-        remote_url/format
-        remote_url/illegal_legal_strings
+  TESTS 
+    base_array/construct
+    base_array/getset
+    base_array/resize
+    base_array/insert
+    base_array/remove
+    base_array/foreach
+    base_array/clone
+    base_array/json
+    base_base64/base64
+    base_convert/tolong
+    base_convert/todouble
+    base_convert/tostring
+    base_convert/tobool
+    base_dictionary/construct
+    base_dictionary/get1
+    base_dictionary/get2
+    base_dictionary/foreach
+    base_dictionary/remove
+    base_dictionary/clone
+    base_dictionary/json
+    base_fifo/construct
+    base_fifo/io
+    base_json/invalid1
+    base_match/tolong
+    base_netstring/netstring
+    base_object/construct
+    base_object/getself
+    base_serialize/scalar
+    base_serialize/array
+    base_serialize/dictionary
+    base_serialize/object
+    base_shellescape/escape_basic
+    base_shellescape/escape_quoted
+    base_stacktrace/stacktrace
+    base_stream/readline_stdio
+    base_string/construct
+    base_string/equal
+    base_string/clear
+    base_string/append
+    base_string/trim
+    base_string/contains
+    base_string/replace
+    base_string/index
+    base_string/find
+    base_timer/construct
+    base_timer/interval
+    base_timer/invoke
+    base_timer/scope
+    base_type/gettype
+    base_type/assign
+    base_type/byname
+    base_type/instantiate
+    base_value/scalar
+    base_value/convert
+    base_value/format
+    config_ops/simple
+    config_ops/advanced
+    icinga_checkresult/host_1attempt
+    icinga_checkresult/host_2attempts
+    icinga_checkresult/host_3attempts
+    icinga_checkresult/service_1attempt
+    icinga_checkresult/service_2attempts
+    icinga_checkresult/service_3attempts
+    icinga_checkresult/host_flapping_notification
+    icinga_checkresult/service_flapping_notification
+    icinga_notification/state_filter
+    icinga_notification/type_filter
+    icinga_macros/simple
+    icinga_legacytimeperiod/simple
+    icinga_perfdata/empty
+    icinga_perfdata/simple
+    icinga_perfdata/quotes
+    icinga_perfdata/multiple
+    icinga_perfdata/uom
+    icinga_perfdata/warncritminmax
+    icinga_perfdata/ignore_invalid_warn_crit_min_max
+    icinga_perfdata/invalid
+    icinga_perfdata/multi
+    remote_url/id_and_path
+    remote_url/parameters
+    remote_url/get_and_set
+    remote_url/format
+    remote_url/illegal_legal_strings
 )
 
 if(ICINGA2_WITH_LIVESTATUS)
