Update default config and documentation for the "library" keyword

--- a/etc/icinga2/features-available/ido-mysql.conf
+++ b/etc/icinga2/features-available/ido-mysql.conf
@@ -1,9 +1,7 @@
 /**
- * The db_ido_mysql library implements IDO functionality
- * for MySQL.
+ * The IdoMysqlConnection type implements MySQL support
+ * for DB IDO.
  */
-
-library "db_ido_mysql"
 
 object IdoMysqlConnection "ido-mysql" {
   //user = "icinga"
