--- a/etc/icinga2/features-available/ido-pgsql.conf
+++ b/etc/icinga2/features-available/ido-pgsql.conf
@@ -1,9 +1,7 @@
 /**
- * The db_ido_pgsql library implements IDO functionality
- * for PostgreSQL.
+ * The IdoPgsqlConnection type implements PostgreSQL support
+ * for DB IDO.
  */
-
-library "db_ido_pgsql"
 
 object IdoPgsqlConnection "ido-pgsql" {
   //user = "icinga"
