--- a/etc/icinga2/features-available/livestatus.conf
+++ b/etc/icinga2/features-available/livestatus.conf
@@ -1,8 +1,6 @@
 /**
- *  The livestatus library implements the livestatus query protocol.
+ *  The LivestatusListener type implements the Livestatus query protocol.
  */
-
-library "livestatus"
 
 object LivestatusListener "livestatus" { }
 
