Implement support for general-purpose rules

--- a/etc/icinga2/conf.d/notifications.conf
+++ b/etc/icinga2/conf.d/notifications.conf
@@ -20,6 +20,12 @@ apply Notification "mail-icingaadmin" to Host {
   assign where host.vars.notification.mail
 }
 
+rule Host {
+  if (vars.notification.mail) {
+    require vars.notification.mail.groups || vars.notification.mail.users
+  }
+}
+
 apply Notification "mail-icingaadmin" to Service {
   import "mail-service-notification"
   user_groups = host.vars.notification.mail.groups
@@ -31,3 +37,4 @@ apply Notification "mail-icingaadmin" to Service {
 
   assign where host.vars.notification.mail
 }
+
