--- a/lib/config/CMakeLists.txt
+++ b/lib/config/CMakeLists.txt
@@ -43,6 +43,7 @@ set(config_SOURCES
   configitem.cpp configitem.hpp
   configitembuilder.cpp configitembuilder.hpp
   expression.cpp expression.hpp
+  mutatorrule.cpp mutatorrule.hpp
   objectrule.cpp objectrule.hpp
   vmops.hpp
   ${FLEX_config_lexer_OUTPUTS} ${BISON_config_parser_OUTPUTS}
