Move the "passive" check command to command-icinga.conf

--- a/itl/command-icinga.conf
+++ b/itl/command-icinga.conf
@@ -38,6 +38,13 @@ object CheckCommand "dummy" {
 	vars.dummy_text = "Check was successful."
 }
 
+object CheckCommand "passive" {
+	import "dummy"
+
+	vars.dummy_state = 3
+	vars.dummy_text = "No Passive Check Result Received."
+}
+
 object CheckCommand "random" {
 	import "random-check-command"
 }
