--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-.vagrant
-.idea
-*.patch
+## Editors
+.idea/
 *.komodoproject
+.*.sw[op]
+*~
+
+## C++ and Tools
+*.patch
 *.playground
-.*.swp
-.*.swo
+.vagrant
+
+## Build artifacts
 build/
 build-debug/
 build-release/
@@ -13,3 +18,6 @@ build64/
 debug/
 release/
 cmake-build-debug
+/Testing/
+/install/
+/vendor/
